# PropiedadesDeLosAlpes

./: .env.template  .gitignore  .pylintrc  Dockerfile  Monoliticas_collection BFF.postman_collection  Monoliticas_collection.postman_collection.json  README.md  app-entrypoint.sh  app.Dockerfile  auditoria-entrypoint.sh  auditoria.Dockerfile  bff_investigacion-entrypoint.sh  bff_investigacion.Dockerfile  coreanalitica-entrypoint.sh  coreanalitica.Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  traductor-entrypoint.sh  traductor.Dockerfile
data/bookkeeper/ledgers/current/: VERSION
data/zookeeper/version-2/: snapshot.102  snapshot.72  snapshot.a8
src/: tasks.py
src/auditoria/api/: __init__.py  auditoria.py
src/auditoria/config/: engine.py  uow.py
src/auditoria/seedwork/aplicacion/: sagas.py
src/auditoria/seedwork/dominio/: entidades.py  fabricas.py  mixins.py
src/auditoria/seedwork/presentacion/: api.py
src/bff_investigacion/: consumidores.py  despachadores.py  main.py  utils.py
src/bff_investigacion/api/v1/: consultas.py  esquemas.py  mutaciones.py  router.py
src/bff_investigacion/schema/v1/: comandos.py  eventos.py
src/coreanalitica/api/: __init__.py  coreanalitica.py
src/coreanalitica/config/: db.py  uow.py
src/coreanalitica/seedwork/dominio/: entidades.py  mixins.py  (+2 more)
src/example/: tasks.py
src/pda/api/: __init__.py  contratos.py  transacciones.py
src/pda/config/: db.py  exec_create_all.py  session.py  uow.py
src/traductor/: main.py
src/traductor/api/: traductor_csv.py  traductor_json.py  traductor_xml.py
(+120 files in other folders)
